# nina

./: .dockerignore  .env.example  .gitignore  API-PT.md  API.md  Dockerfile  GUIDE-PT.md  GUIDE.md  Makefile  README-PT.md  README.md  SKILL-PT.md  SKILL.md  auth.py  calendar_client.py  demo_digest.py  digest.py  docker-compose.override.yml  docker-compose.portainer.yml  docker-compose.yml  errors.py  gmail.py  llm.py  nina.py  pyproject.toml  rename_script.py  telegram_bot.py  telegram_client.py
.github/workflows/: docker.yml
.make/: clean.sh  dev-status.sh  dev-stop.sh  dev.sh  lint.sh  quality.sh  setup.sh
make/: auth.sh  lint.sh  setup.sh
nina/: __init__.py  __main__.py  cli.py
nina/cli/: __init__.py  _env.py  auth.py  calendar.py  console.py  daemon.py  email_label.py  email_learning.py  gmail.py  gmail_label.py  google.py  llm.py  make_aliases.py  migrate.py  parser.py  revoke.py  status.py  telegram.py
nina/console/: runner.py
nina/core/config/: required_env.py
nina/core/console/: freeform_dispatch.py  intent_executors.py  paths.py  runner.py
nina/core/daemon/: client.py  http.py  runner.py
nina/core/i18n/: __init__.py  en.py  pt.py
nina/core/intent/: local_router.py  router.py
nina/core/llm/: __init__.py  client.py  digest.py
nina/core/locale/: models.py  store.py
nina/core/nlp/: __init__.py
nina/core/scheduler/: __init__.py  runner.py
nina/core/store/: db.py  kv.py  models.py
nina/daemon/: client.py  http.py  runner.py
nina/demos/: digest.py
nina/google/: __init__.py  auth.py
nina/google/calendar/: __init__.py  blocking.py  client.py  schedule_parser.py
nina/google/gmail/: __init__.py  client.py
nina/i18n/: __init__.py  en.py  pt.py
nina/integrations/google/: __init__.py  auth.py
nina/integrations/telegram/: __init__.py  bot.py  client.py  command_registry.py  constants.py  free_text_handler.py  offset_store.py
nina/intent/: router.py
nina/llm/: __init__.py  digest.py
nina/locale/: store.py
nina/memo/: interpreter.py
nina/notifications/: store.py
nina/obsidian/: __init__.py  interpreter.py  open_page.py  today_page.py  week_page.py
nina/presence/: interpreter.py  models.py  store.py
nina/profile/: interpreter.py  models.py  store.py
nina/scheduler/: __init__.py  runner.py
nina/store/: db.py  models.py
nina/tasks/: email_infer_rules.py  email_process.py
nina/telegram/: __init__.py  bot.py  client.py
nina/workdays/: checker.py  interpreter.py  store.py
nina_play/: __main__.py  cli.py  digest.py
scripts/: docker-retention.sh  migrate_to_postgres.py
tests/: conftest.py  test_auth.py  test_calendar.py  test_calendar_blocking.py  test_calendar_interpreter.py  test_cli_env.py  test_digest.py  test_email_learning_process_options.py  test_gmail.py  test_http.py  test_i18n.py  test_infer_rules.py  test_llm.py  test_local_router.py  test_locale.py  test_memo_interpreter.py  test_notification_interpreter.py  test_notifications.py  test_obsidian.py  test_obsidian_interpreter.py  test_parse_sender.py  test_presence_interpreter.py  test_profile.py  test_schedule_parser.py  test_scheduler.py  test_store.py  test_telegram.py  test_telegram_bot.py  test_workdays_interpreter.py
(+55 files in other folders)
